# jikan-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: anime.rs  character.rs  clubs.rs  lib.rs  manga.rs  people.rs  producer.rs  seasons.rs  top.rs  users.rs
src/common/: response.rs  utils.rs
src/common/structs/: anime.rs  character.rs  clubs.rs  forum.rs  magazines.rs  manga.rs  producers.rs  recommendation.rs  reviews.rs  users.rs  watch.rs
tests/: anime.rs  character.rs  clubs.rs  genre.rs  magazines.rs  manga.rs  people.rs  producer.rs  random.rs  recommendations.rs  review.rs  schedule.rs  seasons.rs  top.rs  users.rs  watch.rs
tests/common/: macs.rs  mod.rs
