[package]
name = "jikan-rs"
version = "0.2.2"
edition = "2024"
description = "Jikan-Rust is an Rust wrapper for the Jikan API, an open-source API for MyAnimeList. This library allows you to seamlessly interact with MyAnimeList's public data without needing authentication."
license = "MIT"
repository = "https://github.com/Sidharth-Singh10/jikan-rs/" 

[dependencies]
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
serde_json = "1.0.137"
serial_test = "3.2.0"
async-trait = "0.1.85"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6.2"
